// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cart checkout should return an object with the total and the list of items when summary is called 1`] = `
Object {
  "formatted": "R$7.40",
  "items": Array [
    Object {
      "product": Object {
        "price": 120,
        "title": "Adidas",
      },
      "quantity": 2,
    },
    Object {
      "product": Object {
        "price": 100,
        "title": "Nike",
      },
      "quantity": 5,
    },
  ],
  "total": Object {
    "amount": 740,
    "currency": "BRL",
    "precision": 2,
  },
}
`;

exports[`Cart checkout should return object with the total and the list of items 1`] = `
Object {
  "items": Array [
    Object {
      "product": Object {
        "price": 120,
        "title": "Adidas",
      },
      "quantity": 2,
    },
    Object {
      "product": Object {
        "price": 100,
        "title": "Nike",
      },
      "quantity": 5,
    },
  ],
  "total": 740,
}
`;
